testsuite/tests/typecheck/should_fail/T17594d.stderr
T17594d.hs:8:5: error: [GHC-14964]
    • Illegal invisible type pattern: @t
      An invisible type pattern must be checked against a forall.
    • In an equation for ‘id'’: id' @t x = x :: t

